@@ -1,3 +1,8 @@
+2006-12-27 [wwp]	2.6.1cvs78
+
+	* src/imap.c
+		Clean up session locking, thanks to Colin.
+
 2006-12-26 [colin]	2.6.1cvs77
 
 	* src/statusbar.c
